[workspace]
members = [
    "apps/cli",
    "apps/relay",
    "packages/void-crypto",
]
resolver = "2"

[workspace.dependencies]
tokio             = { version = "1.37", features = ["full"] }
reqwest           = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum              = { version = "0.7",  features = ["json"] }
tower             = "0.4"
tower-http        = { version = "0.5",  features = ["cors", "trace"] }
ed25519-dalek     = { version = "2.1",  features = ["rand_core"] }
x25519-dalek      = { version = "2.0",  features = ["static_secrets"] }
chacha20poly1305  = "0.10"
rand              = "0.8"
sha2              = "0.10"
zeroize           = { version = "1.7",  features = ["derive"] }
serde             = { version = "1.0",  features = ["derive"] }
serde_json        = "1.0"
toml              = "0.8"
clap              = { version = "4.5",  features = ["derive", "env"] }
anyhow            = "1.0"
thiserror         = "1.0"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono            = { version = "0.4",  features = ["serde"] }
sled              = "0.34"
futures           = "0.3"
async-trait       = "0.1"

[workspace.package]
version      = "1.0.0"
authors      = ["VoidPush <anon@voidpush.null>"]
edition      = "2021"
license      = "MIT"
repository   = "https://github.com/voidpush-stack/voidpush"
rust-version = "1.78"

[profile.release]
opt-level       = 3
lto             = "thin"
codegen-units   = 1
strip           = "symbols"

[profile.dev]
opt-level = 0
debug     = true
