[package]
name = "vpush"
description = "Anonymous git wrapper CLI — VoidPush"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vpush"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
reqwest.workspace = true
ed25519-dalek.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
sha2.workspace = true
zeroize.workspace = true
sled.workspace = true
toml.workspace = true
futures.workspace = true
async-trait.workspace = true

# Internal
void-crypto = { path = "../../packages/void-crypto" }

# CLI-specific
git2        = "0.19"
dialoguer   = "0.11"
indicatif   = "0.17"
colored     = "2.1"
dirs        = "5.0"
which       = "6.0"
hex         = "0.4"
tempfile    = "3.10"

[dev-dependencies]
assert_cmd  = "2.0"
predicates  = "3.1"

[features]
default = []
test-mode = []
