[package]
name = "void-relay"
description = "VoidPush relay node server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "void-relay"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
reqwest.workspace = true
x25519-dalek.workspace = true
chacha20poly1305.workspace = true
rand.workspace = true
sha2.workspace = true
zeroize.workspace = true
toml.workspace = true
futures.workspace = true
async-trait.workspace = true

void-crypto = { path = "../../packages/void-crypto" }

uuid     = { version = "1.8", features = ["v4", "serde"] }
moka     = { version = "0.12", features = ["future"] }
hex      = "0.4"
tempfile = "3.10"

[dev-dependencies]
axum-test = "14.2"
tempfile  = "3.10"
