[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voidpush-score-engine"
version = "0.1.0"
description = "VoidPush blind code review aggregation and scoring service"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.111.*",
    "uvicorn[standard]==0.30.*",
    "pydantic==2.7.*",
    "pydantic-settings==2.3.*",

    # Database
    "sqlalchemy==2.0.*",
    "alembic==1.13.*",
    "asyncpg==0.29.*",           # Async PostgreSQL driver

    # Crypto / ZK utilities
    "cryptography==42.*",
    "py-ecc==7.0.*",             # Elliptic curve for ZK proofs

    # Caching
    "redis==5.0.*",
    "hiredis==2.3.*",

    # HTTP client (for relay comms)
    "httpx==0.27.*",

    # Observability
    "opentelemetry-sdk==1.25.*",
    "opentelemetry-instrumentation-fastapi==0.46b0",
    "structlog==24.*",
]

[project.optional-dependencies]
dev = [
    "pytest==8.*",
    "pytest-asyncio==0.23.*",
    "pytest-cov==5.*",
    "httpx==0.27.*",            # For TestClient
    "ruff==0.5.*",
    "mypy==1.10.*",
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
dev    = "uvicorn voidpush_score_engine.main:app --reload --port 8001"
test   = "pytest tests/ -v --cov=voidpush_score_engine --cov-report=term-missing"
lint   = "ruff check . && ruff format --check ."
format = "ruff format ."
types  = "mypy voidpush_score_engine/"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "UP", "S", "B", "A"]
ignore = ["S101"]    # Allow assert in tests

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
